static/css/style.css
/* ... */
.hero-cover .navbar-default .navbar-toggle {
    margin-top: 2em;
}

.hero-cover .navbar-default .navbar-collapse {
    border-color: transparent;
    -webkit-box-shadow: none;
    box-shadow: none;
}


.hero-cover .navbar-nav li:last-child a {
    line-height: 60px;
}

@media (min-width: 768px) {
    .hero-cover .navbar-default ul.navbar-nav li a {
        line-height: 60px;
    }
    
}



.hero-cover .navbar-default {
    margin-bottom: 0;
}


.navbar-collapse {
    padding: 0;
}



.calendar-day {
    top: 3px;
}

.date-adj-calendar {
    top: 3px;
    line-height: 2em;
    width: 18em;
    text-align: left;
    margin-left: 2.5em;
}

.question.page-header {
/*    border-left-width: 0.75em;
    border-left-style: solid;
    padding-left: 1em;
    border-bottom-style: none;*/
}

.action-buttons {
    margin-top: 1em;
}

.action-buttons .row {
    margin-right: 0;
}
.answer-buttons{

}
.action-button-ctr {
    margin-top: 1em;
}

.mini.action-button-ctr {
    margin-left: 12px;
    float: none;
}

.mini.action-button-ctr:first-child {

}

.mini.action-button-ctr:last-child {

}

.additional-button-ctr {
    margin-top: 1em;
}

.btn-danger {
    color: #ffffff !important;
}


.text-action-button {
/*    width: 7em;*/

    min-width: 4em;
    font-weight: 800;

}

.text-action-button.share-button {
    height: 28px;
    padding: 3px 12px;
/*    background-color: transparent;*/
}

.text-action-button * {
}

.text-action-button.btn-success {
    border-color: #398439;
}

.text-action-button.btn-danger {
    border-color: #ac2925;
}

/* TODO Use LESS variables for 768px and margins (15px) */

    
    .action-buttons {
        margin-top: 0;
/*        padding-left: 15px;*/
    }
    
    .action-button-ctr {
    }
    
/*    
    @media (max-width: 768px) {
        .text-action-button {
            width: 3em;
        }
    }*/
    
    .form-control.collapse-with-margin {
        margin-top: 5px;
    }




.mini-action-button {
    width: 3em;
}

#facebook-share-button > span {
    width: 80px !important;
    height: 16px !important;
}

.facebook-button {
    background-color: #3b5998;
    border-color: transparent;
    color: #ffffff !important;
}

.facebook-button:hover,
.facebook-button:focus {
    border-color: transparent;
    background-color: #344f88;
}

.facebook-blue {
    color: #3b5998 !important;
}

#facebook-share-button iframe {
    transform: scale(1.3);
    -ms-transform: scale(1.3); 
    -webkit-transform: scale(1.3); 
    -o-transform: scale(1.3); 
    -moz-transform: scale(1.3); 
    transform-origin: top left;
    -ms-transform-origin: top left;
    -webkit-transform-origin: top left;
    -moz-transform-origin: top left;
    -webkit-transform-origin: top left;
}

.twitter-button {
    background-color: #55acee;
    border-color: transparent;
    color: #ffffff !important; 
}

.twitter-button:hover,
.twitter-button:focus {
    background-color: #55acee;
    border-color: transparent;
}

.signup-form .twitter-button {
    margin-top: 0.5em;
}

@media (min-width: 992px) {
    .signup-form .twitter-button {
        margin-top: 0;
    }
}

.modal .vertically-centred {

}

#modal-share-question-link .modal-body {
/*    padding: 0;*/
    text-align: center;
}

#field-share-link {
    border: none;
}


.question-answer .action-button-ctr {
    padding-top: 1em;
    margin-top: 0;
}

.navbar-nav {
    margin-top: 7.5px;
    margin-bottom: 7.5px;
}

.navbar-nav > li > a {
    padding-top: 10px;
    padding-bottom: 10px;
}

.navbar-form {
    margin-top: 2px;
}

.navbar-nav li:last-child a {
    padding-left: 0 !important;
    padding-right: 0;
}

@media (max-width: 768px) {
    .question-image-and-map-ctr .col {
        margin-top: 1em !important;
    }
    
    .nav.navbar-nav.pull-right {
        float: left !important;
    }
    
    .centre-when-viewport-narrowed {
        display: block;
        margin-left: auto;
        margin-right: auto;
        text-align: center;
        float: none !important;
    }
    
    .login-aside-button {
        margin-top: 2em !important;
    }
    
    .login-aside-button:first-child {
        margin-top: 3em !important;
    }
    .video{
        widows: 100% !important;;
    }
}

.login-aside-button {
    margin-top: 1em;
}

.login-aside-button:first-child {
    margin-top: 0;
}

.auth-modal .login-aside-button {
    margin-top: 0 !important;
    margin-bottom: 1em;
}

.evidence-content {
    margin-bottom:30px;
}

.crisis-question-metrics {

}

.crisis-question-metrics .value {
    font-weight: 300;
}

.crisis-question-metric {
    margin-top: 5px;
    font-size: 1.1em !important;
}

.crisis-question-metric.yes {
    background-color: #5cb85c !important;
}

.crisis-question-metric.no {
    background-color: #d2322d !important;
}

.crisis-question-metrics .progress {
    height: 30px;
    width: 100%;
}

.crisis-question-metrics .progress-bar {
    line-height: 30px;
    font-weight: 400;
    font-size: 14px;
}

.progress-bar-success {
    background-color: rgba(92, 184, 92, 0.3);
/*    color: #5cb85c;*/
    color: #3c763d;
}

.progress-bar-danger {
    background-color: rgba(217, 83, 79, 0.3);
/*    color: #d9534f;*/
    color: #a94442;
}


.progress-bar-transparent {
    background-color: transparent;
    color: #333;
}


.text-yes, .text-no {
    font-weight: 300;

}

.success {
    color: #5cb85c;
}

.danger {
    color: #d2322d;
}

.crisis-question-metric.important {
    background-color: transparent;
    color: #000000;
/*    border: 1px solid #ededed;*/

}

.metric.false i {
    color: #803230;
}



/* TODO Use LESS variables */
.action-button-count {
    background-color: #ffffff !important;
/*    color: #428bca;*/
/*    min-width: 4.25em;*/
}

.action-button-count.disabled {
    opacity: 1;
}

/* Buttons with a background colour need better borders */
.action-button-count.back-coloured {
    margin-left: 0 !important;
    border-left: none;
}

.mini .action-button-count {
    min-width: 2em;
}
/* ... */

